remove submodule: tiny

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(SOURCE_ROOT ${PROJECT_SOURCE_DIR}/source)
 INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotTypedef)
 INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotThingManager)
 
-SET(TINY_ROOT ${PROJECT_SOURCE_DIR}/tiny/source/src)
+SET(TINY_ROOT ${PROJECT_SOURCE_DIR}/../tiny/source/src)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/TinyBase)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/TinyPortable)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/TinyContainer)
