--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,3 +143,4 @@ SET_TARGET_PROPERTIES(tinyfx_static PROPERTIES LINKER_LANGUAGE C)
 ADD_LIBRARY(tinyfx SHARED ${SRC})
 SET_TARGET_PROPERTIES(tinyfx PROPERTIES OUTPUT_NAME "tinyfx")
 SET_TARGET_PROPERTIES(tinyfx PROPERTIES LINKER_LANGUAGE C)
+TARGET_LINK_LIBRARIES(tinyfx ${DEPENDENCE_LIB})
