--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -19,8 +19,8 @@ INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyPortable)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyContainer)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyLog)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyStringUtil)
-INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyJson)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/Netty)
+INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/Json)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyUmm)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyMd5)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyThread)
