--- a/source/src/IotInstance/example/CMakeLists.txt
+++ b/source/src/IotInstance/example/CMakeLists.txt
@@ -3,6 +3,6 @@
 # examples
 #
 #-----------------------------------------------------------------------------
-ADD_EXECUTABLE(example_instance_homekit example_homekit.c)
-SET_TARGET_PROPERTIES(example_instance_homekit PROPERTIES LINKER_LANGUAGE C)
-TARGET_LINK_LIBRARIES(example_instance_homekit iot_instance_static iot_typedef_static ${DEPENDENCE_LIB})
+ADD_EXECUTABLE(example_device_instance example_device_instance.c)
+SET_TARGET_PROPERTIES(example_device_instance PROPERTIES LINKER_LANGUAGE C)
+TARGET_LINK_LIBRARIES(example_device_instance iot_instance_static iot_typedef_static ${DEPENDENCE_LIB})
