--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -6,4 +6,4 @@
 ADD_SUBDIRECTORY(IotTypedef)
 ADD_SUBDIRECTORY(IotDeviceManager)
 ADD_SUBDIRECTORY(IotInstance)
-ADD_SUBDIRECTORY(IotOperation)
+ADD_SUBDIRECTORY(IotExecute)
