--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -4,6 +4,6 @@
 #
 #-------------------------------------------------------------------------------------
 ADD_SUBDIRECTORY(IotTypedef)
-ADD_SUBDIRECTORY(IotDeviceManager)
-ADD_SUBDIRECTORY(IotInstance)
+ADD_SUBDIRECTORY(IotLauncher)
+ADD_SUBDIRECTORY(IotFactory)
 ADD_SUBDIRECTORY(IotExecute)
