--- a/source/src/IotFactory/CMakeLists.txt
+++ b/source/src/IotFactory/CMakeLists.txt
@@ -1,31 +1,31 @@
 #-----------------------------------------------------------------------------
 #
-# IotInstance
+# IotFactory
 #
 #-----------------------------------------------------------------------------
 
-SET(IotInstance_Header
-        DeviceInstance.h
+SET(IotFactory_Header
+        DeviceFactory.h
         )
 
-SET(IotInstance_Source
-        DeviceInstance.c
+SET(IotFactory_Source
+        DeviceFactory.c
         )
 
-SOURCE_GROUP(IotInstance\\headers        FILES     ${IotInstance_Header})
-SOURCE_GROUP(IotInstance\\sources        FILES     ${IotInstance_Source})
+SOURCE_GROUP(IotFactory\\headers        FILES     ${IotFactory_Header})
+SOURCE_GROUP(IotFactory\\sources        FILES     ${IotFactory_Source})
 
 SET(SRC
-        ${IotInstance_Header}
-        ${IotInstance_Source}
+        ${IotFactory_Header}
+        ${IotFactory_Source}
     )
 
 #----------------------------------------------------------------------------
 # static library
 #----------------------------------------------------------------------------
-ADD_LIBRARY(iot_instance_static STATIC ${SRC})
-SET_TARGET_PROPERTIES(iot_instance_static PROPERTIES OUTPUT_NAME "iot_instance_static")
-SET_TARGET_PROPERTIES(iot_instance_static PROPERTIES LINKER_LANGUAGE C)
+ADD_LIBRARY(iot_factory_static STATIC ${SRC})
+SET_TARGET_PROPERTIES(iot_factory_static PROPERTIES OUTPUT_NAME "iot_factory_static")
+SET_TARGET_PROPERTIES(iot_factory_static PROPERTIES LINKER_LANGUAGE C)
 
 #----------------------------------------------------------------------------
 # example
